traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:52: error: Unmatched closing brace '}' ignored here
}
^